--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -53,15 +53,15 @@ references:
   commentId: T:CG.Secrets.SqlServer.Repositories.SecretRepository
   fullName: CG.Secrets.SqlServer.Repositories.SecretRepository
   nameWithType: SecretRepository
-- uid: CG.Secrets.SqlServer.Repositories.SecretRepository.#ctor(Microsoft.Extensions.Options.IOptions{CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions},CG.Linq.EFCore.DbContextFactory{CG.Secrets.SqlServer.SecretDbContext})
-  name: SecretRepository(IOptions<SecretRepositoryOptions>, DbContextFactory<SecretDbContext>)
-  href: api/CG.Secrets.SqlServer.Repositories.SecretRepository.html#CG_Secrets_SqlServer_Repositories_SecretRepository__ctor_Microsoft_Extensions_Options_IOptions_CG_Secrets_SqlServer_Repositories_Options_SecretRepositoryOptions__CG_Linq_EFCore_DbContextFactory_CG_Secrets_SqlServer_SecretDbContext__
-  commentId: M:CG.Secrets.SqlServer.Repositories.SecretRepository.#ctor(Microsoft.Extensions.Options.IOptions{CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions},CG.Linq.EFCore.DbContextFactory{CG.Secrets.SqlServer.SecretDbContext})
-  name.vb: SecretRepository(IOptions(Of SecretRepositoryOptions), DbContextFactory(Of SecretDbContext))
-  fullName: CG.Secrets.SqlServer.Repositories.SecretRepository.SecretRepository(Microsoft.Extensions.Options.IOptions<CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions>, CG.Linq.EFCore.DbContextFactory<CG.Secrets.SqlServer.SecretDbContext>)
-  fullName.vb: CG.Secrets.SqlServer.Repositories.SecretRepository.SecretRepository(Microsoft.Extensions.Options.IOptions(Of CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions), CG.Linq.EFCore.DbContextFactory(Of CG.Secrets.SqlServer.SecretDbContext))
-  nameWithType: SecretRepository.SecretRepository(IOptions<SecretRepositoryOptions>, DbContextFactory<SecretDbContext>)
-  nameWithType.vb: SecretRepository.SecretRepository(IOptions(Of SecretRepositoryOptions), DbContextFactory(Of SecretDbContext))
+- uid: CG.Secrets.SqlServer.Repositories.SecretRepository.#ctor(Microsoft.Extensions.Options.IOptions{CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions},CG.Linq.EFCore.DbContextFactory{CG.Secrets.SqlServer.SecretDbContext},Microsoft.AspNetCore.DataProtection.IDataProtectionProvider)
+  name: SecretRepository(IOptions<SecretRepositoryOptions>, DbContextFactory<SecretDbContext>, IDataProtectionProvider)
+  href: api/CG.Secrets.SqlServer.Repositories.SecretRepository.html#CG_Secrets_SqlServer_Repositories_SecretRepository__ctor_Microsoft_Extensions_Options_IOptions_CG_Secrets_SqlServer_Repositories_Options_SecretRepositoryOptions__CG_Linq_EFCore_DbContextFactory_CG_Secrets_SqlServer_SecretDbContext__Microsoft_AspNetCore_DataProtection_IDataProtectionProvider_
+  commentId: M:CG.Secrets.SqlServer.Repositories.SecretRepository.#ctor(Microsoft.Extensions.Options.IOptions{CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions},CG.Linq.EFCore.DbContextFactory{CG.Secrets.SqlServer.SecretDbContext},Microsoft.AspNetCore.DataProtection.IDataProtectionProvider)
+  name.vb: SecretRepository(IOptions(Of SecretRepositoryOptions), DbContextFactory(Of SecretDbContext), IDataProtectionProvider)
+  fullName: CG.Secrets.SqlServer.Repositories.SecretRepository.SecretRepository(Microsoft.Extensions.Options.IOptions<CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions>, CG.Linq.EFCore.DbContextFactory<CG.Secrets.SqlServer.SecretDbContext>, Microsoft.AspNetCore.DataProtection.IDataProtectionProvider)
+  fullName.vb: CG.Secrets.SqlServer.Repositories.SecretRepository.SecretRepository(Microsoft.Extensions.Options.IOptions(Of CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions), CG.Linq.EFCore.DbContextFactory(Of CG.Secrets.SqlServer.SecretDbContext), Microsoft.AspNetCore.DataProtection.IDataProtectionProvider)
+  nameWithType: SecretRepository.SecretRepository(IOptions<SecretRepositoryOptions>, DbContextFactory<SecretDbContext>, IDataProtectionProvider)
+  nameWithType.vb: SecretRepository.SecretRepository(IOptions(Of SecretRepositoryOptions), DbContextFactory(Of SecretDbContext), IDataProtectionProvider)
 - uid: CG.Secrets.SqlServer.Repositories.SecretRepository.#ctor*
   name: SecretRepository
   href: api/CG.Secrets.SqlServer.Repositories.SecretRepository.html#CG_Secrets_SqlServer_Repositories_SecretRepository__ctor_
@@ -69,6 +69,19 @@ references:
   isSpec: "True"
   fullName: CG.Secrets.SqlServer.Repositories.SecretRepository.SecretRepository
   nameWithType: SecretRepository.SecretRepository
+- uid: CG.Secrets.SqlServer.Repositories.SecretRepository.DataProtectionProvider
+  name: DataProtectionProvider
+  href: api/CG.Secrets.SqlServer.Repositories.SecretRepository.html#CG_Secrets_SqlServer_Repositories_SecretRepository_DataProtectionProvider
+  commentId: P:CG.Secrets.SqlServer.Repositories.SecretRepository.DataProtectionProvider
+  fullName: CG.Secrets.SqlServer.Repositories.SecretRepository.DataProtectionProvider
+  nameWithType: SecretRepository.DataProtectionProvider
+- uid: CG.Secrets.SqlServer.Repositories.SecretRepository.DataProtectionProvider*
+  name: DataProtectionProvider
+  href: api/CG.Secrets.SqlServer.Repositories.SecretRepository.html#CG_Secrets_SqlServer_Repositories_SecretRepository_DataProtectionProvider_
+  commentId: Overload:CG.Secrets.SqlServer.Repositories.SecretRepository.DataProtectionProvider
+  isSpec: "True"
+  fullName: CG.Secrets.SqlServer.Repositories.SecretRepository.DataProtectionProvider
+  nameWithType: SecretRepository.DataProtectionProvider
 - uid: CG.Secrets.SqlServer.Repositories.SecretRepository.GetByNameAsync(System.String,System.Threading.CancellationToken)
   name: GetByNameAsync(String, CancellationToken)
   href: api/CG.Secrets.SqlServer.Repositories.SecretRepository.html#CG_Secrets_SqlServer_Repositories_SecretRepository_GetByNameAsync_System_String_System_Threading_CancellationToken_
