--- a/src/CG.Secrets.SqlServer/CG.Secrets.SqlServer.csproj
+++ b/src/CG.Secrets.SqlServer/CG.Secrets.SqlServer.csproj
@@ -9,7 +9,7 @@
 
 Platforms supported:
       .NET 5.x or above</Description>
-    <Copyright>Copyright © 2021 by CodeGator. All rights reserved.</Copyright>
+    <Copyright>Copyright © 2017 - 2021 by CodeGator. All rights reserved.</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/CodeGator/CG.Secrets.SqlServer</PackageProjectUrl>
     <PackageTags>sql server, secrets, CG.Secrets.SqlServer, CodeGator</PackageTags>
@@ -28,8 +28,8 @@ Platforms supported:
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CG.Linq.EFCore" Version="2021.2.4" />
-    <PackageReference Include="CG.Secrets" Version="2021.1.5" />
+    <PackageReference Include="CG.Linq.EFCore" Version="2021.2.5" />
+    <PackageReference Include="CG.Secrets" Version="2021.1.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
