--- a/manifest.json
+++ b/manifest.json
@@ -13,156 +13,27 @@
       "is_incremental": false
     },
     {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.DesignTimeSecretDbContextFactory.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.DesignTimeSecretDbContextFactory.html",
-          "hash": "smHeIHAkR68mxCwrpKFteAJOfvZreVMNSARSeBcJBEw="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.Repositories.Options.SecretRepositoryOptions.html",
-          "hash": "XDCjMbxTMKxPIu8zpKxXfNrioGB4EZ3LBxmd3kjD32c="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.Repositories.Options.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.Repositories.Options.html",
-          "hash": "aMd1ZrLLHGNTKqX24KTnNgxLZzF3v8Ii0GQ9uehFK8A="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.Repositories.SecretRepository.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.Repositories.SecretRepository.html",
-          "hash": "ANKGTFrIRcA1Y7oxA8nug6j8PZcFhEa++/+VDz24ACg="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.Repositories.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.Repositories.html",
-          "hash": "Qhy7DZtKxhIiPo77hzbu7zUjY0MCn9Ui1fksCEho/PA="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.SecretDbContext.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.SecretDbContext.html",
-          "hash": "WFsksH5hpx7KFvKtihKf4cWA7CBO1bmzVjpd/fOK32E="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.SecretsApplicationBuilderExtensions.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.SecretsApplicationBuilderExtensions.html",
-          "hash": "ksOcdIOkqPsiiERhuMbM1OtsRtJ44pZJPeoSFnQimA0="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.SecretsServiceCollectionExtensions.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.SecretsServiceCollectionExtensions.html",
-          "hash": "7pF6ZdXW7EPZVLvMPiFC2R9Dx0RKLC+DnXqSzwso+VI="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/CG.Secrets.SqlServer.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/CG.Secrets.SqlServer.html",
-          "hash": "YqeRCaflC2XjM5XE/seYfls4MmznaSV+hjoTPlwrHbA="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/Microsoft.Extensions.DependencyInjection.SecretsSqlServiceCollectionExtensions.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/Microsoft.Extensions.DependencyInjection.SecretsSqlServiceCollectionExtensions.html",
-          "hash": "X6Ng7WBVt9POnaOGgTzs0wbe7F5jQFI6TGYg/RUOB0M="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "ManagedReference",
-      "source_relative_path": "api/Microsoft.Extensions.DependencyInjection.yml",
-      "output": {
-        ".html": {
-          "relative_path": "api/Microsoft.Extensions.DependencyInjection.html",
-          "hash": "lCrqq1+L4gSpELAvureW08OgxGh1G8ayqR3Dko8jm2s="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
       "type": "Conceptual",
       "source_relative_path": "api/index.md",
       "output": {
         ".html": {
           "relative_path": "api/index.html",
-          "hash": "mIGq6MN1+9d74YgASjE2Zbhjaae5Yi7RhfyjQoXNYjQ="
+          "hash": "qmDz8ga3mWTWm3i5EL3tggh/GfxQ2V0QLhMK74C3Jlk="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "UidNotFound"
+      ],
       "type": "Toc",
       "source_relative_path": "api/toc.yml",
       "output": {
         ".html": {
           "relative_path": "api/toc.html",
-          "hash": "3q1njGbR3qWvRdDrSlyL7w0jUnqyLq7rGtI7K+AGEi0="
+          "hash": "n+HfZL3mOX8Yn2xm8apoiB7B0XTRnlTmkQuAY2hpJOI="
         }
       },
       "is_incremental": false,
@@ -174,7 +45,7 @@
       "output": {
         ".html": {
           "relative_path": "articles/intro.html",
-          "hash": "gcp1JB3/cLklcT+72krfnba+6CuoFkaQtheZ9cEBdjQ="
+          "hash": "OgOIdp+68sKjWkO8X7/eMKamv9SPvmhi1lIB7IfCk/4="
         }
       },
       "is_incremental": false,
@@ -242,19 +113,22 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "OLYpBvhWEvY4cAChdN2qK6tOIlvrdtx5e/8tiuVpO9w="
+          "hash": "WRJ1xg+HlBT7fxslmaibTHglwDiix0GZ8Z0lPRoC8gY="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "UidNotFound"
+      ],
       "type": "Toc",
       "source_relative_path": "toc.yml",
       "output": {
         ".html": {
           "relative_path": "toc.html",
-          "hash": "SQ8Fg9AQ7oNckuS0QeyPr0/E9IovylgZTZLvZAWqIUA="
+          "hash": "tQAifr3UtzJCJiy0xJmE55ZppwjrRb0TNZr5LWuQpBQ="
         }
       },
       "is_incremental": false,
@@ -276,12 +150,6 @@
           "can_incremental": false,
           "incrementalPhase": "build",
           "total_file_count": 3,
-          "skipped_file_count": 0
-        },
-        "ManagedReferenceDocumentProcessor": {
-          "can_incremental": false,
-          "incrementalPhase": "build",
-          "total_file_count": 11,
           "skipped_file_count": 0
         },
         "ResourceDocumentProcessor": {
